refactor: Collections.singletonMap을 Map.of로 변경